fix first paragraph spacing

--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -42,7 +42,7 @@ main
   background-color: white
   font-size: 1.2rem
 
-  div > p:first-child
+  div > p:first-of-type
     margin-bottom: 1rem
 
   .main__chapter
